--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@ header {
   justify-content: space-between;
   align-items: self-start;
   padding: 38px 48px;
+  position: relative;
 }
 
 .logo {
@@ -17,10 +18,28 @@ header {
   margin-top: 23px;
 }
 
-input[type="checkbox"]:checked ~ nav{
-    display: block;
+input[type="checkbox"]:checked ~ nav {
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: var(--background-tertiary-color);
 }
 
 nav {
   display: none;
+}
+
+.list-links {
+  list-style: none;
+}
+
+.list-links li{
+    margin: 16px 0;
+}
+
+.list-links li a {
+  color: var(--text-secundary-color);
+  text-decoration: none;
 }
